# searchlite

./: .git-cliff.toml  .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md  docs.jsonl  index-schema.json  install.sh  openapi.yaml  release-plz.toml  schema.json  search-request.schema.json
.codex/skills/gh-fix-ci/scripts/: SKILL.md  inspect_pr_checks.py
.github/workflows/: ci.yml  release-artifacts.yml  release.yml
docs/: intro.md  quickstart.md
examples/recipes/: data.jsonl  schema.json
examples/recipes/queries/: agg-macros-by-diet.json  collapse-quick-by-cuisine.json  fuzzy-weeknight-orzo.json  gluten-free-chocolate-dessert.json  gluten-free-fruit-crisp.json  high-protein-legumes.json  instant-pot-chili-rescore.json  meal-prep-vegan-chili.json  mediterranean-romaine-salad.json  mediterranean-seafood.json  pescatarian-shrimp-curry.json  quick-veg-dinner.json  simple.json  vegan-breakfast.json  vegan-tofu-high-protein.json  weeknight-orzo-vegetarian.json
examples/video-games/: schema.json
examples/video-games/queries/: achievement-guide-platinum.json  aggregations-era-platforms.json  collapse-review-by-game.json  emulation-notes-crt-shader.json  fuzzy-meta-ps5-misspell.json  high-score-modern-reviews.json  modern-meta-ps5.json  retro-cheat-infinite-lives.json  speedrun-rescore-bmw.json  speedrun-route-sub100.json  wildcard-konami-code.json
schemas/: search.json
searchlite-cli/: CHANGELOG.md  Cargo.toml
searchlite-cli/src/: main.rs
searchlite-core/: CHANGELOG.md  Cargo.toml
searchlite-core/benches/: aggs.rs  end_to_end.rs
searchlite-core/examples/: pruning.rs
searchlite-core/src/: lib.rs
searchlite-core/src/analysis/: analyzer.rs  mod.rs  normalizer.rs  tokenizer.rs
searchlite-core/src/api/: builder.rs  errors.rs  mod.rs  query.rs  reader.rs  types.rs  writer.rs
searchlite-core/src/gpu/: rerank.rs
searchlite-core/src/index/: codec.rs  directory.rs  docstore.rs  fastfields.rs  highlight.rs  manifest.rs  mod.rs  postings.rs  segment.rs  terms.rs  wal.rs
searchlite-core/src/query/: aggregation.rs  bm25.rs  boolean.rs  collector.rs  facets.rs  filters.rs  mod.rs  phrase.rs  planner.rs  score_functions.rs  script.rs  sort.rs  util.rs  wand.rs
searchlite-core/src/query/aggs/: mod.rs
searchlite-core/src/storage/: mod.rs
searchlite-core/src/util/: bitpack.rs  checksum.rs  fst.rs  mmap.rs  mod.rs  regex.rs  varint.rs
searchlite-core/src/vectors/: hnsw.rs  mod.rs  quant.rs
searchlite-core/tests/: aggregation_bounds.rs  aggregations.rs  analyzers.rs  coverage.rs  facets.rs  file_format.rs  function_score.rs  multi_field.rs  prefix_and_suggest.rs  pruning.rs  query_ast.rs  regressions.rs  smoke.rs  sorting.rs  vector_search.rs
searchlite-ffi/: CHANGELOG.md  Cargo.toml  build.rs  searchlite.h
searchlite-ffi/src/: lib.rs
searchlite-http/: CHANGELOG.md  Cargo.toml
searchlite-http/src/: lib.rs  main.rs
searchlite-wasm/: CHANGELOG.md  Cargo.toml  index.html
searchlite-wasm/.cargo/: config.toml
searchlite-wasm/src/: lib.rs  wasm.rs
