[package]
name = "searchlite-cli"
version = "0.1.0"
edition = "2021"
authors = ["Searchlite Authors"]
license = "MIT"
description = "CLI for searchlite"
publish = false

[features]
default = []
vectors = ["searchlite-core/vectors"]
gpu = ["searchlite-core/gpu"]
zstd = ["searchlite-core/zstd"]
ffi = ["searchlite-core/ffi"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
searchlite-core = { path = "../searchlite-core", package = "searchlite-core" }
chrono = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
tempfile = "3.8.1"
