[package]
name = "searchlite-cli"
version = "0.1.3"
edition = "2021"
authors = ["Searchlite Authors"]
license = "MIT"
description = "CLI for searchlite"

[features]
default = []
vectors = ["searchlite-core/vectors", "searchlite-http/vectors"]
gpu = ["searchlite-core/gpu", "searchlite-http/gpu"]
zstd = ["searchlite-core/zstd", "searchlite-http/zstd"]
ffi = ["searchlite-core/ffi"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
searchlite-core = { path = "../searchlite-core", package = "searchlite-core" }
searchlite-http = { path = "../searchlite-http", package = "searchlite-http" }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
chrono = { workspace = true }
env_logger = { workspace = true }
tracing = "0.1.40"

[dev-dependencies]
tempfile = "3.8.1"
