[package]
name = "searchlite-http"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
vectors = ["searchlite-core/vectors"]
gpu = ["searchlite-core/gpu"]
zstd = ["searchlite-core/zstd"]

[dependencies]
anyhow = { workspace = true }
axum = "0.7.9"
clap = { workspace = true, features = ["derive", "env"] }
futures-util = "0.3.31"
searchlite-core = { path = "../searchlite-core", package = "searchlite-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "signal", "io-util"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower = { version = "0.4.13", features = ["timeout", "limit"] }
tower-http = { version = "0.5.2", features = ["limit", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"] }
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "signal", "io-util"] }
